@@ -57,6 +57,40 @@
 				</table>
 				<br />
 				<span fckLang="DlgLnkStyle">Link style</span><br />
+				
+				
+				<script type="text/javascript">
+					
+					if(FCKConfig.LinkClasses && FCKConfig.LinkClassesNames)
+					{
+						document.write("<select id=\"txtAttClasses\">");
+						document.write("	<option value='' fckLang='DlgLnkStyleLinkIcon' selected='selected'>None</option>");
+						
+						var linkClasses=FCKConfig.LinkClasses.split(',');
+						var linkClassesNames=FCKConfig.LinkClassesNames.split(',');
+						for (var i=0;i<linkClasses.length;i++)
+						{
+							linkClass = linkClasses[i]; 
+							linkClassName = linkClassesNames[i]; 
+							document.write("	<option value=\"" + linkClass + "\" fckLang=\"DlgLnkStyleLinkIcon\">" + linkClassName + "</option>");
+						}
+						
+						document.write("</select>");
+					}
+					else
+					{
+						document.write("<select id=\"txtAttClasses\">");
+						document.write("	<option value=\"\" fckLang=\"DlgLnkStyleLinkIcon\" selected=\"selected\">None</option>");
+						document.write("	<option value=\"dotlink\" fckLang=\"DlgLnkStyleLinkIcon\">L&auml;nkicon</option>");
+						document.write("	<option value=\"pdficon\" fckLang=\"DlgLnkStylePdfIcon\">Pdf</option>");
+						document.write("	<option value=\"wordicon\" fckLang=\"DlgLnkStyleWordIcon\">Word</option>");
+						document.write("	<option value=\"excelicon\" fckLang=\"DlgLnkStyleExcelIcon\">Excel</option>");
+						document.write("	<option value=\"powerpointicon\" fckLang=\"DlgLnkStylePowerPointIcon\">Powerpoint</option>");
+						document.write("</select>");
+					}
+				</script>
+
+				<!--			
 				<select id="txtAttClasses">
 					<option value="" fckLang="DlgLnkStyleLinkIcon" selected="selected">None</option>
 					<option value="dotlink" fckLang="DlgLnkStyleLinkIcon">L&auml;nkicon</option>
@@ -65,6 +99,7 @@
 					<option value="excelicon" fckLang="DlgLnkStyleExcelIcon">Excel</option>
 					<option value="powerpointicon" fckLang="DlgLnkStylePowerPointIcon">Powerpoint</option>
 				</select>
+				-->
 				<br />
 				<br />
 				<div id="divBrowseServer">
